--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,12 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --light1: #fff;
+  --light2: #b5b5b5;
+  --med1: #7e7e7e;
+  --med2: #4c4c4c;
+  --dark1: #343434;
+  --dark2: #000000;
+  /*  to use these variables you put var(--variableName)  */
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
 
 * {
   margin: 0;
@@ -43,7 +41,7 @@ body {
 header {
   width: calc(100%);
   padding: 0 0.25em;
-  background-color: black;
+  background-color: var(--dark2);
   color: aliceblue;
   display: flex;
   justify-content: space-between;
@@ -63,7 +61,7 @@ main {
 footer {
   width: calc(100%);
   padding: 0 0.25em;
-  background-color: rgb(0, 0, 0);
+  background-color: var(--dark2);
   color: aliceblue;
   display: flex;
   /* justify-content: space-between; */
@@ -75,14 +73,14 @@ nav {
   display: flex;
   padding: 10px;
   display: flex;
-  background-color: #303030;
+  background-color: var(--med2);
   width: 100%;
   border-radius: 10px 10px 0px 0px;
 }
 
 button {
   transition: opacity 0.25s ease-in-out;
-  background-color: #fff;
+  background-color: var(--light1);
   border-radius: 12px;
   color: #000;
   cursor: pointer;
@@ -107,12 +105,12 @@ button {
   min-height: 200px;
   min-width: 500px;
   justify-content: space-between;
-  background-color: #bcbcbc;
+  background-color: var(--light2);
   border-radius: 0px 0px 10px 10px;
 }
 
 .gridSquare {
-  background-color: #fff;
+  background-color: var(--light1);
   border-radius: 10px;
   margin: 10px;
   padding: 15px;
@@ -131,7 +129,25 @@ button {
   transition: width 1s ease-in-out;
 }
 
-.gridSquare:hover {
+.gridSquare:hover,
+.selectedNote {
   /* border: 3px solid white; */
   box-shadow: 0px 0px 3px black inset;
+}
+
+#noteEditorContainer {
+  background-color: var(--light2);
+  width: 100%;
+  /* height: 100px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#noteEditor {
+  width: 90%;
+  height: 100px;
+  margin: 10px;
+  background-color: var(--light1);
+  border-radius: 10px;
 }
