add local storage and various fixes

--- a/src/Content/components/NoteContainer/styles.css
+++ b/src/Content/components/NoteContainer/styles.css
@@ -30,6 +30,10 @@
   transition: width 1s ease-in-out;
 }
 
+.subtitle  {
+  font-size: .75rem;
+}
+
 .gridSquare:hover,
 .gridSquare:focus,
 .selectedNote {
