attempt at updating notes on save

--- a/src/Content/components/NoteContainer/styles.css
+++ b/src/Content/components/NoteContainer/styles.css
@@ -1,19 +1,19 @@
 #noteContainer {
   display: grid;
   justify-content: center;
-  grid-template-columns: 32% 32% 32%;
+  grid-template-columns: 25% 25% 25% 25%;
   min-height: 200px;
   min-width: 500px;
   justify-content: space-between;
   background-color: var(--light2);
   border-radius: 0px 0px 10px 10px;
-  padding: 10px;
+  padding: 5px;
 }
 
 .gridSquare {
   background-color: var(--light1);
   border-radius: 10px;
-  margin: 0px;
+  margin: 5px;
   padding: 10px;
   height: 200px;
   /* width: 200px; */
@@ -30,8 +30,8 @@
   transition: width 1s ease-in-out;
 }
 
-.subtitle  {
-  font-size: .75rem;
+.subtitle {
+  font-size: 0.75rem;
 }
 
 .gridSquare:hover,
