--- a/src/Content/components/NoteContainer/styles.css
+++ b/src/Content/components/NoteContainer/styles.css
@@ -8,6 +8,8 @@
   background-color: var(--light2);
   border-radius: 0px 0px 10px 10px;
   padding: 5px;
+  height: 100%;
+  overflow: scroll;
 }
 
 .gridSquare {
