--- a/src/Content/components/NoteEditor/styles.css
+++ b/src/Content/components/NoteEditor/styles.css
@@ -9,17 +9,30 @@
 
 #noteEditor {
   width: 100%;
-  height: 100px;
+  height: 200px;
   margin: 10px;
   padding: 10px;
-  background-color: var(--light1);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  background-color: var(--light1);
 }
 
 #noteEditorText {
-  padding: 10px;
+  padding: 6px;
   width: 100%;
   height: 100%;
+}
+
+#noteEditorHeader {
+  padding: 0px 10px;
+  font-size: 20px;
+  border: none;
+}
+
+textarea {
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  resize: none;
+  border-radius: 3px;
 }
