--- a/src/Content/components/NoteContainer/styles.css
+++ b/src/Content/components/NoteContainer/styles.css
@@ -3,7 +3,7 @@
   justify-content: center;
   grid-template-columns: 25% 25% 25% 25%;
   min-height: 200px;
-  min-width: 500px;
+  min-width: 700px;
   justify-content: space-between;
   background-color: var(--light2);
   border-radius: 0px 0px 10px 10px;
@@ -32,14 +32,25 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
   /*       white-space: nowrap; */
-  text-overflow: ellipsis;
+  /* text-overflow: ellipsis; */
   box-sizing: border-box;
   /* border: 3px solid transparent; */
   transition: width 1s ease-in-out;
 }
 
+.title {
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+
 .subtitle {
   font-size: 0.75rem;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  -webkit-line-clamp: 6;
+  overflow: hidden;
 }
 
 .gridSquare:hover,
